--- a/templates/fhir_patient_search.html
+++ b/templates/fhir_patient_search.html
@@ -19,6 +19,7 @@
                         <option value="Practitioner">Practitioner</option>
                         <option value="Observation">Observation</option>
                         <option value="Medication">Medication</option>
+                        <option value="MedicationRequest">MedicationRequest</option>
                     </select>
                 </div>
                 <div id="patient-form" class="form-section" style="display: none;">
@@ -100,6 +101,23 @@
                         <label for="dose_form">Dose Form</label>
                         <input type="text" class="form-control" id="dose_form" name="dose_form"
                             placeholder="Enter medication dose form, e.g., Tablet">
+                    </div>
+                </div>
+                <div id="medication-request-form" class="form-section" style="display: none;">
+                    <div class="form-group">
+                        <label for="medication_request_id">Medication Request ID</label>
+                        <input type="text" class="form-control" id="medication_request_id" name="medication_request_id"
+                            placeholder="Enter medication request ID, e.g., 12345">
+                    </div>
+                    <div class="form-group">
+                        <label for="medication_request_status">Medication Request Status</label>
+                        <input type="text" class="form-control" id="medication_request_status" name="medication_request_status"
+                            placeholder="Enter medication request status, e.g., active">
+                    </div>
+                    <div class="form-group">
+                        <label for="medication_request_medication">Medication Request Medication</label>
+                        <input type="text" class="form-control" id="medication_request_medication" name="medication_request_medication"
+                            placeholder="Enter medication request medication, e.g., 12345">
                     </div>
                 </div>
                 <br>
