--- a/templates/edit_fhir_patient.html
+++ b/templates/edit_fhir_patient.html
@@ -477,8 +477,8 @@
                 </div>
                 <div class="row g-2">
                     <div class="col-md">
-                        <div class="form-group
-                                <label for=" contact_postal_code">Contact Postal Code</label>
+                        <div class="form-group">
+                                <label for="contact_postal_code">Contact Postal Code</label>
                             <input type="text" class="form-control" name="contact_postal_code" id="contact_postal_code"
                                 value="{{ patient.contact[0].address.postalCode if patient.contact else '' }}">
                         </div>
@@ -486,8 +486,8 @@
                 </div>
                 <div class="row g-2">
                     <div class="col-md">
-                        <div class="form-group
-                                <label for=" contact_address_use">Contact Address Type</label>
+                        <div class="form-group">
+                                <label for="contact_address_use">Contact Address Type</label>
                             <select name="contact_address_use" class="form-control" id="contact_address_use" required>
                                 {% if patient.contact and patient.contact[0].address.use == 'home' %}
                                 <option value="home" selected>Home</option>
