--- a/templates/new_fhir_patient.html
+++ b/templates/new_fhir_patient.html
@@ -254,7 +254,7 @@
                         </div>
 
                         <div class="row g-2">
-                            <label for="languages">Languages Spoken</label>
+                            <h3 for="languages">Languages Spoken</h3>
                             <div class="col-md">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" id="language_french"
