--- a/templates/edit_fhir_patient.html
+++ b/templates/edit_fhir_patient.html
@@ -251,7 +251,7 @@
                     </div>
                 </div>
 
-                 <div class="row g-2">
+                <div class="row g-2">
                     <div class="col-md">
                         <div class="form-group">
                             <label for="general_practitioner_refrence">General Practitioner Reference</label>
@@ -299,21 +299,155 @@
                     </div>
                 </div>
                 <div class="row g-2">
+                    <label for="languages">Languages Spoken</label>
+                    {% if patient.communication|length != 0 %}
                     <div class="col-md">
                         <div class="form-group">
-                            <label for="languages">Languages Spoken</label>
-                                {% for communication in patient.communication %}
-                                <div class="form-check">
-                                    <input type="checkbox" class="form-check-input" name="languages"
-                                        id="languages_{{ loop.index }}" value="{{ communication.language.coding[0].display }}"
-                                        checked>
-                                    <label for="languages_{{ loop.index }}">{{ communication.language.coding[0].display.capitalize()
-                                        }}</label>
-                                </div>
-                                {% endfor %}
+                            {% for communication in patient.communication %}
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" name="languages"
+                                    id="languages_{{ loop.index }}"
+                                    value="{{ communication.language.coding[0].display }}" checked>
+                                <label for="languages_{{ loop.index }}">{{
+                                    communication.language.coding[0].display.capitalize()
+                                    }}</label>
                             </div>
+                            {% endfor %}
                         </div>
-              
+                    </div>
+                    {% else %}
+                    <div class="col-md">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_french" name="languages"
+                                value="french">
+                            <label class="form-check-label" for="language_french">French</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_italian" name="languages"
+                                value="italian">
+                            <label class="form-check-label" for="language_italian">Italian</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_spanish" name="languages"
+                                value="spanish">
+                            <label class="form-check-label" for="language_spanish">Spanish</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_portuguese" name="languages"
+                                value="portuguese">
+                            <label class="form-check-label" for="language_portuguese">Portuguese</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_romanian" name="languages"
+                                value="romanian">
+                            <label class="form-check-label" for="language_romanian">Romanian</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_german" name="languages"
+                                value="german">
+                            <label class="form-check-label" for="language_german">German</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_english" name="languages"
+                                value="english">
+                            <label class="form-check-label" for="language_english">English</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_dutch" name="languages"
+                                value="dutch">
+                            <label class="form-check-label" for="language_dutch">Dutch</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_swedish" name="languages"
+                                value="swedish">
+                            <label class="form-check-label" for="language_swedish">Swedish</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_danish" name="languages"
+                                value="danish">
+                            <label class="form-check-label" for="language_danish">Danish</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_norwegian" name="languages"
+                                value="norwegian">
+                            <label class="form-check-label" for="language_norwegian">Norwegian</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_russian" name="languages"
+                                value="russian">
+                            <label class="form-check-label" for="language_russian">Russian</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_polish" name="languages"
+                                value="polish">
+                            <label class="form-check-label" for="language_polish">Polish</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_czech" name="languages"
+                                value="czech">
+                            <label class="form-check-label" for="language_czech">Czech</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_slovak" name="languages"
+                                value="slovak">
+                            <label class="form-check-label" for="language_slovak">Slovak</label>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_bulgarian" name="languages"
+                                value="bulgarian">
+                            <label class="form-check-label" for="language_bulgarian">Bulgarian</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_serbian" name="languages"
+                                value="serbian">
+                            <label class="form-check-label" for="language_serbian">Serbian</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_croatian" name="languages"
+                                value="croatian">
+                            <label class="form-check-label" for="language_croatian">Croatian</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_slovenian" name="languages"
+                                value="slovenian">
+                            <label class="form-check-label" for="language_slovenian">Slovenian</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_latvian" name="languages"
+                                value="latvian">
+                            <label class="form-check-label" for="language_latvian">Latvian</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_lithuanian" name="languages"
+                                value="lithuanian">
+                            <label class="form-check-label" for="language_lithuanian">Lithuanian</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_greek" name="languages"
+                                value="greek">
+                            <label class="form-check-label" for="language_greek">Greek</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_finnish" name="languages"
+                                value="finnish">
+                            <label class="form-check-label" for="language_finnish">Finnish</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_hungarian" name="languages"
+                                value="hungarian">
+                            <label class="form-check-label" for="language_hungarian">Hungarian</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="language_estonian" name="languages"
+                                value="estonian">
+                            <label class="form-check-label" for="language_estonian">Estonian</label>
+                        </div>
+                    </div>
+                    {% endif %}
+
+                    {% if patient.communication|length > 1 %}
                     <div class="form-group">
                         <label for="preferred_language">Preferred Language</label>
                         <select type="text" class="form-control" name="preferred_language" id="preferred_language"
@@ -326,6 +460,40 @@
                             {% endfor %}
                         </select>
                     </div>
+                    {% else %}
+                    <div class="form-group">
+                        <label for="preferred_language">Preferred Language</label>
+                        <select class="form-control" id="preferred_language" name="preferred_language" required>
+                            <option value="" disabled selected>Select</option>
+                            <option value="french">French</option>
+                            <option value="italian">Italian</option>
+                            <option value="spanish">Spanish</option>
+                            <option value="portuguese">Portuguese</option>
+                            <option value="romanian">Romanian</option>
+                            <option value="german">German</option>
+                            <option value="english">English</option>
+                            <option value="dutch">Dutch</option>
+                            <option value="swedish">Swedish</option>
+                            <option value="danish">Danish</option>
+                            <option value="norwegian">Norwegian</option>
+                            <option value="russian">Russian</option>
+                            <option value="polish">Polish</option>
+                            <option value="czech">Czech</option>
+                            <option value="slovak">Slovak</option>
+                            <option value="bulgarian">Bulgarian</option>
+                            <option value="serbian">Serbian</option>
+                            <option value="croatian">Croatian</option>
+                            <option value="slovenian">Slovenian</option>
+                            <option value="latvian">Latvian</option>
+                            <option value="lithuanian">Lithuanian</option>
+                            <option value="greek">Greek</option>
+                            <option value="finnish">Finnish</option>
+                            <option value="hungarian">Hungarian</option>
+                            <option value="estonian">Estonian</option>
+                        </select>
+                    </div>
+                    {% endif %}
+
                 </div>
                 <div class="row g-2">
                     <div class="col-md">
@@ -379,15 +547,20 @@
                             <select type="text" class="form-control" name="contact_family_name_prefix"
                                 id="contact_family_name_prefix"
                                 value="{{ patient.contact[0].name._family.extension[0].valueString if patient.contact else '' }}">
-                                {% if patient.contact and patient.contact[0].name._family.extension[0].valueString == 'Mr.' %}
+                                {% if patient.contact and patient.contact[0].name._family.extension[0].valueString ==
+                                'Mr.' %}
                                 <option value="Mr.">Mr.</option>
-                                {% elif patient.contact and patient.contact[0].name._family.extension[0].valueString == 'Mrs.' %}
+                                {% elif patient.contact and patient.contact[0].name._family.extension[0].valueString ==
+                                'Mrs.' %}
                                 <option value="Mrs.">Mrs.</option>
-                                {% elif patient.contact and patient.contact[0].name._family.extension[0].valueString == 'Ms.' %}
+                                {% elif patient.contact and patient.contact[0].name._family.extension[0].valueString ==
+                                'Ms.' %}
                                 <option value="Ms.">Ms.</option>
-                                {% elif patient.contact and patient.contact[0].name._family.extension[0].valueString == 'Dr.' %}
+                                {% elif patient.contact and patient.contact[0].name._family.extension[0].valueString ==
+                                'Dr.' %}
                                 <option value="Dr.">Dr.</option>
-                                {% elif patient.contact and patient.contact[0].name._family.extension[0].valueString == 'Prof.' %}
+                                {% elif patient.contact and patient.contact[0].name._family.extension[0].valueString ==
+                                'Prof.' %}
                                 <option value="Prof.">Prof.</option>
                                 {% endif %}
                                 <option value="Mr.">Mr.</option>
@@ -395,7 +568,7 @@
                                 <option value="Ms.">Ms.</option>
                                 <option value="Dr.">Dr.</option>
                                 <option value="Prof.">Prof.</option>
-                                </select>
+                            </select>
                         </div>
                     </div>
                 </div>
@@ -478,7 +651,7 @@
                 <div class="row g-2">
                     <div class="col-md">
                         <div class="form-group">
-                                <label for="contact_postal_code">Contact Postal Code</label>
+                            <label for="contact_postal_code">Contact Postal Code</label>
                             <input type="text" class="form-control" name="contact_postal_code" id="contact_postal_code"
                                 value="{{ patient.contact[0].address.postalCode if patient.contact else '' }}">
                         </div>
@@ -487,7 +660,7 @@
                 <div class="row g-2">
                     <div class="col-md">
                         <div class="form-group">
-                                <label for="contact_address_use">Contact Address Type</label>
+                            <label for="contact_address_use">Contact Address Type</label>
                             <select name="contact_address_use" class="form-control" id="contact_address_use" required>
                                 {% if patient.contact and patient.contact[0].address.use == 'home' %}
                                 <option value="home" selected>Home</option>
@@ -505,8 +678,7 @@
                     <div class="col-md">
                         <div class="form-group">
                             <label for="active">Active</label>
-                            <select class="form-control" id="active" name="active" 
-                            value="{{ patient.active }}">
+                            <select class="form-control" id="active" name="active" value="{{ patient.active }}">
                                 <option value="True">Yes</option>
                                 <option value="False">No</option>
                             </select>
