--- a/templates/fhir_patient_search.html
+++ b/templates/fhir_patient_search.html
@@ -21,6 +21,7 @@
                         <option value="Medication">Medication</option>
                         <option value="MedicationRequest">Medication Request</option>
                         <option value="MedicationDispense">Medication Dispense</option>
+                        <option value="MessageHeader">Message Header</option>
                     </select>
                 </div>
                 <div id="patient-form" class="form-section" style="display: none;">
@@ -154,12 +155,40 @@
                             placeholder="Enter medication dispense patient, e.g., 12345">
                     </div>
                 </div>
-                <br>
-                <div class="button-inline">
-                    <button type="submit" class="button">Search</button>
-                    <button onclick="window.location.href='{{ url_for('index') }}';" class="button"
-                        type="button">Return</button>
-                </div>
+                <div id="messageheader-form" class="form-section" style="display: none;">
+                    <div class="form-group">
+                        <label for="message_header_id">Message Header ID</label>
+                        <input type="text" class="form-control" id="message_header_id" name="message_header_id"
+                            placeholder="Enter message header ID, e.g., 12345">
+                    </div>
+                    <div class="form-group">
+                        <label for="message_header_destination">Message Header Destination</label>
+                        <input type="text" class="form-control" id="message_header_destination"
+                            name="message_header_destination"
+                            placeholder="Enter message header destination, e.g., TESTEAPP or HEPIC">
+                    </div>
+                    <div class="form-group">
+                        <label for="message_header_source">Message Header Source</label>
+                        <input type="text" class="form-control" id="message_header_source" name="message_header_source"
+                            placeholder="Enter message header source, e.g., GH">
+                    </div>
+                    <div class="form-group">
+                        <label for="message_header_author">Message Header Author</label>
+                        <input type="text" class="form-control" id="message_header_author" name="message_header_author"
+                            placeholder="Enter message header author, e.g., 12345">
+                    </div>
+                    <div class="form-group">
+                        <label for="message_header_event">Message Header Event Coding</label>
+                        <input type="text" class="form-control" id="message_header_event" name="message_header_event"
+                            placeholder="Enter message header event coding, e.g., ADT|A01">
+                    </div>
+
+                    <br>
+                    <div class="button-inline">
+                        <button type="submit" class="button">Search</button>
+                        <button onclick="window.location.href='{{ url_for('index') }}';" class="button"
+                            type="button">Return</button>
+                    </div>
             </form>
 
 
