Update card title in FHIR patient search form to clarify resource search

--- a/templates/fhir_patient_search.html
+++ b/templates/fhir_patient_search.html
@@ -4,7 +4,7 @@
 <div class="intro-container">
     <div class="card">
         <div class="card-body">
-            <h1 class="card-title">Search HAPI for FHIR patient</h1>
+            <h1 class="card-title">Search within sample Resources on HAPI FHIR server</h1>
             <h3>Instructions</h3>
             <p>🚧 Work in progress:<br>Select a resource type and then use the form to enter search parameters for the
                 resource.</p>
